--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
 
     <section class="hero">
-        <img src="images/banner.jpg" alt="Imagen principal">
+        <img src="prueba.jpg" alt="Imagen principal">
         <h2>Bienvenido a Mi Web</h2>
         <p>Esta es una página de ejemplo que puedes modificar y personalizar.</p>
         <button onclick="mostrarMensaje()">Haz clic aquí</button>
