--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
             </ul>
         </nav>
     </header>
-
+    <div id="game-container" style="display: none;">
+    <div id="controls">
+        <button id="reset-button">Nuevo Juego</button>
+        <button id="flag-button">Modo Bandera</button>
+        <div id="mines-counter">Minas restantes: 15</div>
+    </div>
+    <div id="minesweeper"></div>
+    </div>
     <section class="hero">
         <img src="/prueba.jpg" alt="Imagen principal">
         <h2>Bienvenido a Mi Web</h2>
